--- a/package.json
+++ b/package.json
@@ -54,11 +54,14 @@
   },
   "devDependencies": {
     "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-a11y": "^6.5.6",
     "@storybook/addon-actions": "^6.5.6",
     "@storybook/addon-docs": "^6.5.6",
     "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-interactions": "^6.5.6",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.6",
+    "@storybook/addons": "^6.5.6",
     "@storybook/builder-webpack5": "^6.5.6",
     "@storybook/manager-webpack5": "^6.5.6",
     "@storybook/node-logger": "^6.5.6",
